8364360: Defining hidden class with no room in constant pool crashes the VM